* Removed windows renaming * Fixed scrolling to visible tab (small issue with first tabs of first windows are still pending) * Added tabs count to window nodes

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -9,7 +9,7 @@
 .tabs-lord-icon-close {
 	background-image: url("/images/close.png");
 	margin-left: 6px;
-	margin-top: 4px;
+	margin-top: -2px;
 	vertical-align: middle;
 	text-align: center;
 }
